<resources>
    <string name="loading">Loading</string>
    <string name="general_error">Something went wrong… </string>
    <string name="retry">Retry</string>
</resources>