<resources>
    <string name="expand_or_collapse">Expand or Collapse</string>
    <string name="how_to_prepare">How To Prepare</string>
    <string name="ingredients">Ingredients</string>
</resources>